--- a/style.css
+++ b/style.css
@@ -20,7 +20,43 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 */
 
+html,body { padding: 0; margin: 0; }
+body { margin-top: -20px; }
+
+div { box-sizing: border-box; }
+
 body {
     background: url("background.jpg");
     background-size: cover;
+}
+
+#wrapper {
+    overflow: auto;
+
+    margin: 0;
+    box-shadow: inset 0 140px 140px -60px rgba(0, 0, 0, 0.8);
+}
+
+footer {
+    
+}
+
+#content {
+    width: 81%;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+#header { height: 128px; margin-top: 30px; }
+#header img { height: 100px; vertical-align: middle; }
+#header span {
+    font-family: "Raleway", sans-serif;
+    font-size: 64px;
+    font-weight: 900;
+
+    color: white;
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+
+    vertical-align: bottom;
+    margin-left: 5px;
 }
