--- a/style.css
+++ b/style.css
@@ -32,9 +32,8 @@ body {
 
 #wrapper {
     overflow: auto;
-
     margin: 0;
-    box-shadow: inset 0 140px 140px -60px rgba(0, 0, 0, 0.8);
+    padding: 0;
 }
 
 footer {
@@ -42,12 +41,23 @@ footer {
 }
 
 #content {
-    width: 81%;
+    width: 75%;
+    min-height: calc(100vh - 130px);
     margin: 0 auto;
-    margin-top: 20px;
+
+    margin-top: -10px;
+    padding: 18px;
+
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-#header { height: 128px; margin-top: 30px; }
+#header {
+    height: 100px;
+    width: 75%;
+
+    margin: 30px auto;
+    padding: 0 30px;
+}
 #header img { height: 100px; vertical-align: middle; }
 #header span {
     font-family: "Raleway", sans-serif;
